v051
  - add in missing <title></title> in head of nav

v050
  - major overhaul to get ePub3-itizer to update it to use 
      the new plugin interface in Sigil 1.0 and 
      to work with epubs with non-standard layouts
  - should continue to work with Sigil version before Sigil 1.0
  - remove support for SMIL updating as Sigil now properly handles that in epub3

v041
  - fix typo that caused bug when creating nav from ncx
  - convert illegal in epub3 big tags to span tags with inline styles 

v040
  - recognize and convert calibre:title_sort to its epub3 equivalent
  - update 48x48 quicklaunch plugin to enhance readability
  - make opf id generation more robust to prevent the potential for id clashes

v039
  - recognize and convert calibre:series and calibre:series_index to their epub3 equivalents
  - added simple 48x48 plugin.png icon for use in Sigil QuickLaunch Toolbar icons
  - remove any charset attribute from link tags since epubcheck objects

v038
  - restrict fix that forced focus to Mac systems to prevent problems on other platforms
  - remove display:none css from parts of the nav since they are redudant given the hidden attribute
  - remove empty dc: metadata since for epub3 epubcheck barfs on it
  - Add LGPL V2 or LGPL V3 license info to plugin.py

v037
  - Attempt to force the FileDialog to the front with focus so people know the plugin is running 

v036
  - Bug fix to prevent xml headers on smil files from interfering with the plugin

v035
  - add code to ensure only epub2 epubs are passed to ePub3-itizer
  - also enable autostart, and update plugin.xml version

V034
  - prevent empty guide elements from being introduced into epub3 opf as marked as an error
  - actually use the just fixed media-types for fonts

V033 
  - Alpe has contributed a major new feature - support for SMIL generation via this plugin and one of his own
  - added hidden="" attribute to nav landmark and page-list (thnaks to Doitsu for pointing this out)