@@ -4,9 +4,9 @@
 <type>output</type>
 <author>KevinH</author>
 <description>Create ePub 3 from valid ePub2 with extensions</description>
-<engine>python3.4</engine>
 <engine>python2.7</engine>
-<version>0.5.1</version>
+<engine>python3.4</engine>
+<version>0.5.5</version>
 <autostart>true</autostart>
 <oslist>osx,win,unx</oslist>
 </plugin>
